fix: getCrmData with filter also removed password from login response
